
- GD:
  . Fixed bug #68629 (Transparent artifacts when using imagerotate). (pierre,
    cmb)
  . Fixed bug #64823 (ZTS GD fails to to find system TrueType font). (cmb)

- Intl:
  . Bumped ICU requirement to ICU >= 57.1. (cmb)
  . IntlDateFormatter::setTimeZone()/datefmt_set_timezone() throws an exception
    with uninitialised classes or clone failure. (David Carlier)

- MySQLnd:
  . Added mysqlnd.collect_memory_statistics to ini quick reference.
    (hauk92)

- OPcache:
  . Fixed ZTS OPcache build on Cygwin. (cmb)
  . Added opcache.file_cache_read_only. (Samuel Melrose)

- Output:
  . Fixed calculation of aligned buffer size. (cmb)

- PCRE:
  . Upgraded to pre2lib from 10.44 to 10.45. (nielsdos)

- PDO_PGSQL:
  . Added Iterable support for PDO::pgsqlCopyFromArray. (KentarouTakeda)
  . Implement GH-15387 Pdo\Pgsql::setAttribute(PDO::ATTR_PREFETCH, 0) or
    Pdo\Pgsql::prepare(…, [ PDO::ATTR_PREFETCH => 0 ]) make fetch() lazy
    instead of storing the whole result set in memory (Guillaume Outters)

- PGSQL:
  . Added pg_close_stmt to close a prepared statement while allowing
    its name to be reused. (David Carlier)
  . Added Iterable support for pgsql_copy_from. (David Carlier)
  . pg_connect checks if connection_string contains any null byte,
    pg_close_stmt check if the statement contains any null byte.
    (David Carlier)

- POSIX:
  . Added POSIX_SC_OPEN_MAX constant to get the number of file descriptors
    a process can handle. (David Carlier)
  . posix_ttyname() sets last_error to EBADF on invalid file descriptors,
    posix_isatty() raises E_WARNING on invalid file descriptors,
    posix_fpathconf checks invalid file descriptors. (David Carlier)

- Random:
  . Moves from /dev/urandom usage to arc4random_buf on Haiku. (David Carlier)

- Reflection:
  . Added ReflectionConstant::getExtension() and ::getExtensionName().
    (DanielEScherzer)
  . Fixed bug GH-12856 (ReflectionClass::getStaticPropertyValue() returns UNDEF