@@ -44,6 +44,10 @@ PHP 8.5 UPGRADE NOTES
   . ldap_get_option() and ldap_set_option() now throw a ValueError when
     passing an invalid option.
 
+- MySQLi:
+  . Calling the mysqli constructor on an already-constructed object
+    is now no longer possible and throws an Error.
+
 - PCNTL:
   . pcntl_exec() now throws ValueErrors when entries of the $args parameter
     contain null bytes.
