@@ -12,8 +12,8 @@ $mysqli->close();
 
 ?>
 --EXPECTF--
-Fatal error: Uncaught Error: mysqli object is not fully initialized in %s:%d
+Fatal error: Uncaught Error: Cannot call constructor twice in %s:%d
 Stack trace:
-#0 %s(%d): mysqli->close()
+#0 %s(%d): mysqli->__construct('doesnotexist')
 #1 {main}
   thrown in %s on line %d
